# raposa-schemas

./: README.md  pyproject.toml  requirements.txt  setup.py
raposa_schemas/: default_bots.py  indicator_schemas.py  risk_management_schemas.py  schemas.py  validators.py  version.py
schemas/: schemas.py
tests/: common.py  sizing_schemas.py  test_buy_signal_schemas.py  test_indicator_schemas.py  test_risk_management_schemas.py  test_sizing_schemas.py
